# aff4-forensic

./: .gitignore  .gitleaks.toml  Cargo.toml  HANDOFF.md  README.md  clippy.toml  mkdocs.yml  release-plz.toml  rust-toolchain.toml
.github/workflows/: ci.yml  docs.yml  fuzz.yml  release.yml
aff4/: Cargo.toml
aff4/src/: error.rs  lib.rs  meta.rs  testutil.rs
aff4/tests/: corpus.rs
aff4/tests/data/: README.md
core/: CHANGELOG.md  Cargo.toml
core/docs/: corpus-validation.md
core/src/: crypto.rs  error.rs  lib.rs  logical.rs  map.rs  meta.rs  testutil.rs  vfs.rs
core/tests/: corpus.rs  encrypted.rs  vfs_image_source.rs
core/tests/data/: README.md  encrypted-linear-password.aff4
corpus/: fetch.sh
docs/: corpus-validation.md  finding-codes.md  implementation-notes.md  index.md  privacy.md  terms.md
docs/archive/: HANDOFF.md
docs/decisions/: 0001-bevy-index-is-12-byte-offset-length.md  0002-encrypted-streams-secure-by-default-decryption.md  0003-aff4-logical-is-a-separate-collection-reader.md  0004-container-kind-detection-probe.md  0005-read-via-zip-forensic-core-writer-is-test-only.md
forensic/: CHANGELOG.md  Cargo.toml
forensic/docs/: validation.md
forensic/src/: lib.rs
forensic/tests/: audit.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_audit.rs  fuzz_decrypt.rs  fuzz_logical.rs  fuzz_open.rs
supply-chain/: config.toml
