[workspace]
resolver = "2"
members = ["aff4"]

# Single source of truth for fields shared by every member (DRY): bump version /
# MSRV / license here once; members inherit via `field.workspace = true`.
[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Albert Hui"]

# Single source of truth for dependency versions (DRY): declare each once;
# members write `dep.workspace = true`.
[workspace.dependencies]
thiserror = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
zip-forensic-core = "0.1"
flate2 = "1"
snap = "1"
lz4_flex = "0.11"
tempfile = "3"
proptest = "1"
