[package]
name         = "aff4"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.85"
description  = "Pure-Rust read-only AFF4 (Advanced Forensic Format 4) disk image reader"
license      = "MIT"
authors      = ["Albert Hui"]
keywords     = ["forensics", "aff4", "disk-image", "container"]
categories   = ["parser-implementations", "filesystem"]

[features]
test-helpers = []

[dependencies]
thiserror = "2"
zip       = "2"
flate2    = "1"

[dev-dependencies]
tempfile  = "3"
proptest  = "1"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all       = { level = "warn", priority = -1 }
pedantic  = { level = "warn", priority = -1 }
unwrap_used = "deny"
