[package]
name         = "aff4"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description  = "Pure-Rust read-only AFF4 (Advanced Forensic Format 4) disk image reader"
license.workspace = true
exclude     = ["tests/data/", "corpus/", "fuzz/", ".github/", "deny.toml", "renovate.json", ".pre-commit-config.yaml"]
authors.workspace = true
keywords     = ["forensics", "aff4", "disk-image", "container"]
categories   = ["parser-implementations", "filesystem"]

[features]
test-helpers = []

[dependencies]
thiserror = { workspace = true }
zip       = { workspace = true }
flate2    = { workspace = true }
snap      = { workspace = true }
lz4_flex  = { workspace = true }

[dev-dependencies]
tempfile  = { workspace = true }
proptest  = { workspace = true }
lz4_flex  = { workspace = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all       = { level = "warn", priority = -1 }
pedantic  = { level = "warn", priority = -1 }
unwrap_used = "deny"
