[package]
name    = "aff4-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[[bin]]
name  = "fuzz_open"
path  = "fuzz_targets/fuzz_open.rs"
test  = false
doc   = false

[[bin]]
name  = "fuzz_logical"
path  = "fuzz_targets/fuzz_logical.rs"
test  = false
doc   = false

[[bin]]
name  = "fuzz_audit"
path  = "fuzz_targets/fuzz_audit.rs"
test  = false
doc   = false

[dependencies]
libfuzzer-sys = "0.4"
aff4          = { path = "../core" }
aff4-forensic = { path = "../forensic" }
tempfile      = "3"
